--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    
 	   	<!-- CSS files-->
 	   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+   	   	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	   	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -15,16 +16,19 @@
 			<h1>Wikipedia Viewer</h1>
 			<a href="https://en.wikipedia.org/wiki/Special:Random" target="blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b3/Wikipedia-logo-v2-en.svg/1200px-Wikipedia-logo-v2-en.svg.png"></a>
 			<div class="row">
-				<div class="col-md-8">
-				<input class="form-control" id="searchTerm" placeholder="Enter your search">
+				<div class="col-md-10">
+					<input class="form-control" id="searchTerm" placeholder="Enter your search">
 				</div>
-				<div class="col md-1">
-				<button id="search" type="button" class="btn btn-primary">Submit</button>
+				<div class="col md-2">
+					<button id="search" type="button" class="btn btn-primary"><i class="fa fa-search fa-fw" aria-hidden="true"></i>Submit</button>
 				</div>
 			</div>
 		</div>
-		<ul id="output"></ul>
+		<ul id="output" class="list-unstyled"></ul>
 	</div>
+	<footer class="footer">
+      <p>Copyright © Angela Leung 2018. All Rights Reserved</p>
+    </footer>
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="javascript.js"></script>
 </body>
